--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TDEC Register</title>
+    <link rel="stylesheet" href="/Assets/css/styles.css">
+    <script src="/Assets/js/main.js"></script>
 </head>
 <body>
-    
 </body>
 </html>
