--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	</head>
 
 	<body>
-		
+		<form>
+			<h1>Application for leave</h1>
+			<div>
+				<label>User ID:</label>
+				<input type="text">
+			</div>
+			<div>
+				<label>Password:</label>
+				<input type="password">
+			</div>
+		</form>
 	</body>
 </html>
