Fixed bug: Fixed linking of files to the HTML file

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<title>TDEC Register</title>
-		<link rel="stylesheet" href="../Assets/css/styles.css">
-		<script src="../Assets/js/main.js"></script>
+		<link rel="stylesheet" href="./Assets/css/styles.css">
+		<script src="./Assets/js/main.js"></script>
 	</head>
 
 	<body>
