--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title>TDEC Register</title>
@@ -7,16 +7,60 @@
 	</head>
 
 	<body>
-		<form>
+		<form class="container">
 			<h1>Application for leave</h1>
-			<div>
+			<div class="field">
 				<label>User ID:</label>
 				<input type="text">
 			</div>
-			<div>
+			<div class="field">
 				<label>Password:</label>
 				<input type="password">
 			</div>
 		</form>
+	</body>
+</html> -->
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>TDEC Register</title>
+	<link rel="stylesheet" href="./Assets/css/styles.css">
+	<script src="./Assets/js/main.js"></script>
+</head>
+
+
+
+
+
+
+
+
+
+
+	<body>
+		<div class="container">
+
+			<h1>Leave Application</h1>
+
+			<form action="">
+
+				<div class="field">
+					<label>User ID</label>
+					<input type="text" placeholder="Enter User Name">
+				</div>
+
+				<div class="field">
+					<label for="password">Password</label>
+					<input type="password" id="password" placeholder="Enter Meteric Number">
+				</div>
+
+				<button>Submit</button>
+			</form>
+		</div>
 	</body>
 </html>
