--- a/index.html
+++ b/index.html
@@ -2,25 +2,27 @@
 <html lang="en">
 	<head>
 		<title>TDEC Register</title>
-		<link rel="stylesheet" href="./Assets/css/styles.css">
-		<script src="./Assets/js/main.js"></script>
+		<link rel="stylesheet" href="./Assets/css/styles.css" />
+		<script src="./Assets/js/main.js" defer></script>
 	</head>
-	
+
 	<body>
 		<div class="container">
+			<h1>Leave Appl<span id="easter-egg">i</span>cation</h1>
 
-			<h1>Leave Application</h1>
-
-			<form action="">
-
+			<form action="./Registration.html">
 				<div class="field">
 					<label>User ID</label>
-					<input type="text" placeholder="Enter User Name">
+					<input type="text" placeholder="Enter User Name" />
 				</div>
 
 				<div class="field">
 					<label for="password">Password</label>
-					<input type="password" id="password" placeholder="Enter Meteric Number">
+					<input
+						type="password"
+						id="password"
+						placeholder="Enter Meteric Number"
+					/>
 				</div>
 
 				<button>Submit</button>
