--- a/Registration.html
+++ b/Registration.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<div class="container">
-			<h1>Reg<a id="easter-egg" href="./credits.html">i</a>stration</h1>
+			<h1>Reg<a id="easter-egg" href="/credits.html">i</a>stration</h1>
 
 			<form action="">
 				<div class="field">
