fix credits page 404 error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<div class="container">
-			<h1>Leave Appl<a id="easter-egg" href="/credits.html">i</a>cation</h1>
+			<h1>Leave Appl<a id="easter-egg" href="credits.html">i</a>cation</h1>
 
 			<form action="./Registration.html">
 				<div class="field">
